Se mejora  cobros y se añade Entidades